# RT-Graph

./: .clang-format  .gitignore  .gitmodules  README.md
bfs/: CMakeLists.txt  dataset  kron.nsys-rep  nsight_linear_bfs.sh  nsight_rt_bfs_v2.sh  nsys_linear_bfs.sh  nsys_rt_bfs.sh  run_linear_bfs.sh  run_rt_bfs.sh
bfs/graph/: CMakeLists.txt  convertor.cpp  graph.cpp
bfs/graph/include/: graph.h
bfs/graph/mmio/: mmio.cpp  mmio.h
bfs/linear_bfs/: CMakeLists.txt  linear_bfs.cu  linear_bfs.cuh  main.cu
bfs/profile/linear-bfs/: LiveJournal1.nsys-rep  hollywood.nsys-rep  kron.nsys-rep  orkut.nsys-rep  road_usa.nsys-rep  twitter.nsys-rep
bfs/profile/rt-bfs/: LiveJournal1.nsys-rep  hollywood.nsys-rep  kron.nsys-rep  orkut.nsys-rep  road_usa.nsys-rep
bfs/profile/rt-bfs-enc/: LiveJournal1.nsys-rep  hollywood.nsys-rep  kron.nsys-rep  orkut.nsys-rep  road_usa.nsys-rep
bfs/rt_bfs/: CMakeLists.txt  cuda_helper.cu  cuda_helper.h  device_programs.cu  device_programs_v2.cu  launch_params.h  main.cpp  main_v2.cpp  record.h  rt_bfs.cu  rt_bfs.h  rt_bfs_v2.cu  rt_bfs_v2.h
bfs/utils/: common.h  timer.h
list-intersection/: CMakeLists.txt
list-intersection/baseline/: CMakeLists.txt  bi_dynamic.cu
list-intersection/data_generator/: data.cpp  s_generator.cpp
list-intersection/rt/: CMakeLists.txt  device_programs.cu  main.cpp  rt_base.cpp
list-intersection/rt/include/: model.h  rt_intersection.h
list-intersection/scripts/: si_vary_skew_ratio.py
list-intersection/utils/: timer.h
rt_search/: CMakeLists.txt  DevicePrograms.cu  LaunchParams.h  RTBase.cpp  RTBase.h  Record.h  Timing.h  casting_kernels.cu  casting_kernels.h  config.h  helper.h  measure.cpp  run_measure.py  run_profile.sh  search.cpp  simple_bs.cu  simple_bs.h  utils.h
rt_search/cmake/: FindOptiX.cmake  configure_optix.cmake
rt_search/output/: q16_unsorted_data.txt  q24_unsorted_data.txt
set_intersection/: CMakeLists.txt
set_intersection/baseline/: bi_naive.cu  bs.cu  hi.cu  ip.cu  main.cu  set_intersection.cu
set_intersection/cmake/: FindOptiX.cmake  configure_optix.cmake  fetch_libs.cmake
set_intersection/data_generator/: CMakeLists.txt  data.h  m_generator.cpp
set_intersection/rt/: rt_intersection.cpp
set_intersection/rt/include/: launch_params.h  records.h  rt_base.h
set_intersection/scripts/: generate_data.py  si_vary_density.py  si_vary_selectivity.py
set_intersection/utils/: common.h  util.cpp  util.h
tc/: CMakeLists.txt  dataset
tc/bs_tc/: CMakeLists.txt  bs_tc.cu  bs_tc.h  main.cu
tc/graph/: CMakeLists.txt  convertor.cpp  graph.cpp  thrust_helper.cu
tc/graph/include/: graph.h  thrust_helper.h
tc/output/profile/rt_1A2/: dblp.nsys-rep  patents.nsys-rep  wiki.nsys-rep  youtube.nsys-rep
tc/output/profile/rt_2A1/: com-lj.nsys-rep  dblp.nsys-rep  ljournal.nsys-rep  patents.nsys-rep  wiki.nsys-rep  youtube.nsys-rep
tc/rt_tc/: CMakeLists.txt  cuda_helper.cu  device_programs.cu  main.cpp  rt_base.cpp  rt_tc.cpp
tc/rt_tc/include/: config.h  cuda_helper.h  launch_params.h  records.h  rt_base.h  rt_tc.h
tc/script/: gpu_power.py  nsys_rt_tc.sh  powerlaw_graph.py  run_bs_tc.sh  run_rt_profile.sh  run_rt_tc.sh
tc/utils/: model.h  timer.h
tools/: convert2mtx.py  powerlaw_cluster_graph.py  powerlaw_configuration.py  read_graph.py
